# tif-to-zarr

./: .gitignore  README.md  pyproject.toml
.github/workflows/: to_pypi.yml
src/: conversion_lib.py  n5_attrs_template.json  tif_to_zarr.py  tiff_stack.py  tiff_stack_to_zarr.py  tiff_to_zarr.py  tiff_volume.py  writes.py  zarr_attrs_template.json
src/tiff_to_zarr/: tiff_stack.py  tiff_to_zarr.py  tiff_volume.py
tif_to_zarr/: __init__.py  conversion_lib.py  n5_attrs_template.json  tif_to_zarr.py
