[tool.poetry]
name = "tiff-to-zarr"
version = "0.1.0"
description = ""
authors = ["yurii_zubov"]
license = "BSD 3-Clause License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
imagecodecs = "^2024.1.1"

[tool.poetry.group.dev.dependencies]
zarr = "^2.16.1"
dask = "^2023.10.1"
dask-jobqueue = "^0.8.2"
numpy = "^1.25.1"
tifffile = "^2023.9.26"
logging = "^0.4.9.6"
xarray-multiscale = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
